--- a/pom.xml
+++ b/pom.xml
@@ -134,30 +134,13 @@
       <version>${org.slf4j-version}</version>
       <scope>runtime</scope>
     </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.15</version>
-      <exclusions>
-        <exclusion>
-          <groupId>javax.mail</groupId>
-          <artifactId>mail</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>javax.jms</groupId>
-          <artifactId>jms</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.sun.jdmk</groupId>
-          <artifactId>jmxtools</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>com.sun.jmx</groupId>
-          <artifactId>jmxri</artifactId>
-        </exclusion>
-      </exclusions>
-      <scope>runtime</scope>
-    </dependency>
+
+      <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
 
     <!-- @Inject -->
     <dependency>
@@ -288,6 +271,24 @@
               <version>1.2.1</version>
               <configuration>
                   <mainClass>org.test.int1.Main</mainClass>
+              </configuration>
+          </plugin>
+
+          <!-- jetty插件 -->
+          <plugin>
+              <groupId>org.eclipse.jetty</groupId>
+              <artifactId>jetty-maven-plugin</artifactId>
+              <!--<version>9.0.0.v20130308</version>-->
+              <version>9.2.7.v20150116</version>
+              <configuration>
+                  <scanIntervalSeconds>3</scanIntervalSeconds>
+                  <webApp>
+                      <contextPath>/cloudmember</contextPath>
+                  </webApp>
+                  <httpConnector>
+                      <port>8080</port>
+                  </httpConnector>
+                  <reload>automatic</reload>
               </configuration>
           </plugin>
       </plugins>
